# multinite-web-compiler

./: .gitignore  Cargo.toml  README.md  package.json
src/: lib.rs  main.rs
test/: 01.mws  02.mws  03.mws  04.mws  syntax.mws
