[package]
name = "multinite-web-script-compiler"
description = "A compiler for the multinite web script language."
homepage = "https://multinite.com"
keywords = ["mws", "multinite", "web", "script", "compiler"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.1.8", features = ["pattern"] }
flate2 = "1.0"