[package]
name = "multinite-web-script-compiler"
description = "A compiler for the multinite web script language."
homepage = "https://multinite.com"
keywords = ["mws", "multinite", "web", "script", "compiler"]
version = "1.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "mws_compiler"
path = "src/lib.rs"

[dependencies]
regex = { version = "1.1.8", features = ["pattern"] }
flate2 = "1.0"